# emergencyapp

./: CMakeLists.txt  README.md  backend.cpp  backend.h
qt/: Main.qml  main.cpp
